# raytrace

./: Cargo.toml  output.ppm  room.glb
src/: aabb.rs  bvh_node.rs  camera.rs  color.rs  example_worlds.rs  hittable.rs  hittable_list.rs  image_writer.rs  interval.rs  lib.rs  main.rs  material.rs  misc.rs  perlin.rs  ppm_image_writer.rs  quad.rs  rand.rs  ray.rs  rtw_image.rs  sphere.rs  texture.rs  vec3.rs
src/hittables/: bvh_node.rs  constant_medium.rs  hittable.rs  hittable_list.rs  mod.rs  moving.rs  quad.rs  rotate_y.rs  sphere.rs  translate.rs  triangle.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material.rs  metal.rs  mod.rs
src/pdfs/: cosine_pdf.rs  hittable_pdf.rs  mixture_pdf.rs  mod.rs  pdf.rs  sphere_pdf.rs
src/primitives/: aabb.rs  color.rs  interval.rs  mod.rs  onb.rs  ray.rs  vec3.rs
src/res/: room.gltf
src/textures/: checker_texture.rs  image_texture.rs  mod.rs  noise_texture.rs  perlin.rs  rtw_image.rs  solid_color.rs  texture.rs
